# zw-mcp-server

./: Cargo.toml  README.md  mcp-config.json
.github/workflows/: rust.yml
src/: main.rs
src/mcp/: protocol.rs  server.rs  tools.rs
src/zw_core/: chars.rs  engine.rs  mod.rs
