[package]
name = "zw-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Zero-Width Character Steganography MCP Server for CTF"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
